--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-player": "^3.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.1",
+    "sweetalert2": "^11.23.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
   },
