--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # VITE_API_BASEURL = https://msc-backend-7jzk.onrender.com/api/v1/
-VITE_API_BASEURL = https://msc-backend.vercel.app/api/v1
-# VITE_API_BASEURL = http://localhost:5500/api/v1/
+# VITE_API_BASEURL = https://msc-backend.vercel.app/api/v1
+VITE_API_BASEURL = http://localhost:5500/api/v1/
